Refactor Web API (#2)
